# pensyve

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  agent-memory-research.md  agents  commands  conftest.py  glama.json  hooks  llms.txt  pyproject.toml  server.json  skills  smithery.yaml
.agents/plugins/: codex-marketplace.json  marketplace.json
.cargo/: config.toml
.claude-plugin/: marketplace.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  deploy-gateway.yml  release.yml  secrets-scan.yml
benchmarks/: README.md
benchmarks/eval-dataset/: README.md  scenarios.json
benchmarks/locomo/: dataset.py  evaluate.py  run.py
benchmarks/longmemeval/: dataset.py  evaluate.py  prepare.py  run.py
benchmarks/memoryarena/: dataset.py  evaluate.py  run.py
benchmarks/synthetic/: evaluate.py  generate.py  run.py
benchmarks/tuning/: optimize.py
cli/: Cargo.toml
crates/pensyve-core/: Cargo.toml
docs/: ARCHITECTURE.md  DOCS_IMPROVEMENT_PLAN.md  GETTING_STARTED.md  PROGRESS.md  RECIPES.md  ROADMAP.md
docs/benchmarks/: longmemeval-reader-ablation.typ
integrations/: README.md  build.sh
integrations/amazon-q/: CHANGELOG.md  README.md
integrations/autogen/: CHANGELOG.md  README.md  SUBSTRATE_PROMPT.md  __init__.py  pensyve_autogen.py  pensyve_capture.py  pyproject.toml
integrations/autogen/examples/: pensyve_agent.py
integrations/autogen/scripts/: lint-mcp-refs.sh
integrations/autogen/src/_vendor/: memory_capture_core.py
integrations/autogen/tests/: test_pensyve_autogen.py
integrations/claude-code/: .mcp.json  README.md  pensyve-plugin.local.md  plugin.json
integrations/cline/: CHANGELOG.md  README.md
integrations/codex-plugin/: .mcp.json  AGENTS.md  CHANGELOG.md  README.md
integrations/continue/: CHANGELOG.md  README.md  config.yaml.example
integrations/crewai/: CHANGELOG.md  README.md  SUBSTRATE_PROMPT.md  __init__.py  pensyve_capture.py  pensyve_crewai.py  pyproject.toml  requirements.txt
integrations/crewai/examples/: pensyve_crew.py
integrations/crewai/scripts/: lint-mcp-refs.sh
integrations/crewai/src/_vendor/: memory_capture_core.py
integrations/crewai/tests/: test_pensyve_crewai.py
integrations/cursor/: CHANGELOG.md  README.md
integrations/gemini-extension/: CHANGELOG.md  GEMINI.md  README.md  gemini-extension.json
integrations/google-adk/: CHANGELOG.md  README.md  SUBSTRATE_PROMPT.md
integrations/hermes/: AGENTS.md  CHANGELOG.md  README.md  __init__.py  cli.py  client.py  session.py  tools.py
integrations/jetbrains/: CHANGELOG.md  README.md  jetbrains-mcp.json.example
integrations/kiro/: CHANGELOG.md  README.md
integrations/langchain/: CHANGELOG.md  README.md  SUBSTRATE_PROMPT.md  __init__.py  pensyve_capture.py  pensyve_langchain.py  pyproject.toml
integrations/langchain-ts/: CHANGELOG.md  README.md  SUBSTRATE_PROMPT.md  package-lock.json  package.json
integrations/langchain/examples/: pensyve_agent.py
integrations/langchain/scripts/: lint-mcp-refs.sh
integrations/langchain/src/_vendor/: memory_capture_core.py
integrations/langchain/tests/: conftest.py  test_pensyve_langchain.py
integrations/neovim/: CHANGELOG.md  README.md
integrations/openclaw/: README.md  __init__.py  pensyve_openclaw.py
integrations/openclaw-plugin/: AGENTS.md  CHANGELOG.md  README.md  openclaw.plugin.json  package-lock.json  package.json
integrations/opencode-plugin/: AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json
loadtest/: Cargo.toml
loadtest/src/: main.rs
pensyve-benchmarks/: Cargo.toml
pensyve-benchmarks/src/: corpus.rs  judge.rs  lib.rs  metrics.rs  resilience.rs  sensitivity.rs  stats.rs
pensyve-cli/: Cargo.toml
pensyve-core/: Cargo.toml
pensyve-core/benches/: cognitive_engine.rs
pensyve-core/src/: a2a.rs  activation.rs  classifier.rs  config.rs  consolidation.rs  decay.rs  embedding.rs  extraction.rs  feedback.rs  gdpr.rs  graph.rs  lib.rs  mesh.rs  multimodal.rs  observability.rs  observation.rs  ocr.rs  procedural.rs  recall_grouped.rs  reranker.rs  retrieval.rs  rrf.rs  salience.rs  surprise.rs  sync.rs  types.rs  vector.rs
pensyve-core/src/storage/: mod.rs  postgres.rs  postgres_schema.sql  sqlite.rs
pensyve-core/tests/: adversarial.rs
pensyve-go/: LICENSE  README.md  client.go  client_test.go  episode.go  errors.go  go.mod  retry.go  retry_test.go  types.go
pensyve-mcp/: Cargo.toml  README.md
pensyve-mcp-gateway/: Cargo.toml  Dockerfile  entrypoint.sh
pensyve-mcp-gateway/src/: auth.rs  cache.rs  config.rs  main.rs  oauth.rs  rate_limit.rs  rest.rs  tenant.rs  usage.rs  usage_counter.rs
pensyve-mcp-gateway/tests/: integration_test.rs
pensyve-mcp-tools/: Cargo.toml
pensyve-mcp-tools/src/: lib.rs  params.rs  server.rs  state.rs
pensyve-mcp/src/: main.rs
pensyve-mcp/tests/: integration_test.rs
pensyve-plugin/: .mcp.json  README.md  pensyve-plugin.local.md
pensyve-python/: Cargo.toml  README.md  pyproject.toml
pensyve-python/python/pensyve/: __init__.py  _core.pyi  client.py  reader.py
pensyve-python/src/: lib.rs
pensyve-python/tests/: stress_construct.py  test_haiku_extraction_cache.py  test_reader.py  test_recall_grouped.py
pensyve-ts/: README.md  eslint.config.ts  package.json  tsconfig.json
pensyve-vscode/: package.json  tsconfig.json
pensyve-wasm/: Cargo.toml  README.md
pensyve-wasm/src/: lib.rs
pensyve_python/: __init__.py
pensyve_server/: __init__.py  activity.py  auth.py  billing.py  errors.py  extraction.py  logging.py  main.py  metrics.py  models.py  rate_limit.py  rbac.py  redis_client.py
results/: monte_carlo_20260325_231431.json  monte_carlo_20260326_010334.json  real_content_20260326_012719.json  real_content_20260326_013203.json  real_content_20260326_013340.json  sensitivity_actr_decay.json
website/: .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
(+220 files in other folders)
