[workspace]
resolver = "2"
members = [
    "pensyve-core",
    "pensyve-python",
    "pensyve-mcp",
    "pensyve-mcp-tools",
    "pensyve-mcp-gateway",
    "pensyve-cli",
    "pensyve-benchmarks",
]
exclude = ["loadtest"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
module_name_repetitions = { level = "allow" }
must_use_candidate = { level = "allow" }
missing_errors_doc = { level = "allow" }
missing_panics_doc = { level = "allow" }
cast_possible_truncation = { level = "allow" }
cast_precision_loss = { level = "allow" }
cast_sign_loss = { level = "allow" }

[workspace.lints.rust]
unsafe_code = "warn"
