[project]
name = "pensyve"
version = "0.1.0"
description = "Universal memory runtime for AI agents — framework-agnostic, protocol-native, offline-first"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Major7 Apps" },
]
keywords = ["ai", "agents", "memory", "llm", "mcp", "retrieval", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.0,<3.0",
    "structlog>=24.0,<26.0",
    "redis[hiredis]>=5.0,<8.0",
]

[project.urls]
Homepage = "https://pensyve.com"
Repository = "https://github.com/major7apps/pensyve"
Documentation = "https://pensyve.com/docs"
Changelog = "https://github.com/major7apps/pensyve/blob/main/CHANGELOG.md"
Issues = "https://github.com/major7apps/pensyve/issues"

[project.optional-dependencies]
dev = [
    "maturin",
    "fastembed",
    "pyright",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx>=0.27",
    "tenacity>=8.0",
]
extraction = [
    "llama-cpp-python",
]
benchmarks = [
    "scipy",
    "numpy",
    "huggingface_hub",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pensyve_server*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pensyve", "pensyve_server"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
include = [
    "pensyve_server",
    "tests/python",
    "benchmarks",
]
exclude = [
    "pensyve-python/python",  # generated by PyO3, has stubs
    ".venv",
    "target",
]
reportMissingImports = false  # pensyve._core is a native module

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["pensyve-python/python"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
