[package]
name = "pensyve-loadtest"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "loadtest"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
