[package]
name = "pensyve-benchmarks"
version = "1.0.2"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
description = "Evaluation framework for Pensyve memory engine"

[dependencies]
pensyve-core = { path = "../pensyve-core" }
rand = "0.10"
rand_distr = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rayon = "1.10"
reqwest = { version = "0.13", features = ["json", "blocking"] }

[[bin]]
name = "monte_carlo_eval"
path = "src/bin/monte_carlo_eval.rs"

[[bin]]
name = "sensitivity_sweep"
path = "src/bin/sensitivity_sweep.rs"

[[bin]]
name = "judge_eval"
path = "src/bin/judge_eval.rs"

[[bin]]
name = "real_content_eval"
path = "src/bin/real_content_eval.rs"

[lints]
workspace = true
