[package]
name = "pensyve-core"
version = "1.3.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
description = "Universal memory runtime for AI agents — episodic, semantic, and procedural memory with 8-signal fusion retrieval"
readme = "../README.md"
homepage = "https://pensyve.com"
repository = "https://github.com/major7apps/pensyve"
documentation = "https://pensyve.com/docs"
keywords = ["ai", "agents", "memory", "llm", "retrieval"]
categories = ["science", "database"]

[lib]
name = "pensyve_core"

[dependencies]
rusqlite = { version = "0.39", features = ["bundled", "vtab"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"
regex = "1"
fastembed = "^5.13"
petgraph = "0.8"
dashmap = "6"
rayon = "1.10"
tracing = "0.1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
sqlx-core = { version = "0.8.6", features = ["_rt-tokio", "_tls-rustls-aws-lc-rs", "json", "chrono", "uuid"], optional = true }
sqlx-postgres = { version = "0.8.6", features = ["json", "chrono", "uuid"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[features]
default = []
postgres = ["dep:sqlx-core", "dep:sqlx-postgres", "dep:tokio"]
# Feature-gate the Anthropic-API-backed observation extractor so users
# who don't need observations pay no HTTP-client compile cost.
observation-extraction = ["dep:reqwest", "dep:tokio"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"

[lints]
workspace = true

[[bench]]
name = "cognitive_engine"
harness = false
