[package]
name = "pensyve-mcp-gateway"
version = "1.0.0"
edition = "2024"
description = "Remote MCP gateway for Pensyve Cloud — Streamable HTTP transport"

[[bin]]
name = "pensyve-mcp-gateway"
path = "src/main.rs"

[dependencies]
pensyve-core = { path = "../pensyve-core" }
pensyve-mcp-tools = { path = "../pensyve-mcp-tools" }
rmcp = { version = "1.2", features = ["server", "transport-streamable-http-server", "macros"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
dashmap = "6"
tokio-util = { version = "0.7", features = ["rt"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[lints]
workspace = true
