[package]
name = "pensyve-mcp-gateway"
version = "1.0.6"
edition = "2024"
description = "Remote MCP gateway for Pensyve Cloud — Streamable HTTP transport"

[[bin]]
name = "pensyve-mcp-gateway"
path = "src/main.rs"

[dependencies]
pensyve-core = { path = "../pensyve-core", features = ["postgres"] }
pensyve-mcp-tools = { path = "../pensyve-mcp-tools" }
rmcp = { version = "1.3", features = ["server", "transport-streamable-http-server", "macros"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["compression-gzip", "compression-br"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha2 = "0.11"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dashmap = "6"
redis = { version = "1.2", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
tokio-util = { version = "0.7", features = ["rt"] }
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sqlx-core = { version = "0.8.6", features = ["_rt-tokio", "_tls-rustls-aws-lc-rs"] }
sqlx-postgres = { version = "0.8.6" }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[lints]
workspace = true
