[package]
name = "pensyve-mcp-tools"
version = "1.3.1"
edition = "2024"
description = "Shared MCP tool definitions for Pensyve servers"

[lib]
name = "pensyve_mcp_tools"

[dependencies]
pensyve-core = { path = "../pensyve-core" }
rmcp = { version = "1.3", features = ["server", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"

[lints]
workspace = true
