[package]
name = "pensyve-mcp"
version = "1.0.3"
edition = "2024"

[[bin]]
name = "pensyve-mcp"
path = "src/main.rs"

[dependencies]
pensyve-core = { path = "../pensyve-core" }
pensyve-mcp-tools = { path = "../pensyve-mcp-tools" }
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
