[package]
name = "pensyve-python"
version = "1.0.1"
edition = "2024"
rust-version = "1.88"
readme = "README.md"
description = "Universal memory runtime for AI agents — framework-agnostic, protocol-native, offline-first"
license = "Apache-2.0"
homepage = "https://pensyve.com"
repository = "https://github.com/major7apps/pensyve"
documentation = "https://pensyve.com/docs"

[lib]
name = "pensyve_python"
crate-type = ["cdylib"]

[dependencies]
pensyve-core = { path = "../pensyve-core" }
pyo3 = { version = "^0.28.2", features = ["extension-module"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[lints]
workspace = true
