[package]
name = "pensyve-python"
version = "1.3.0"
edition = "2024"
rust-version = "1.88"
readme = "README.md"
description = "Universal memory runtime for AI agents — framework-agnostic, protocol-native, offline-first"
license = "Apache-2.0"
homepage = "https://pensyve.com"
repository = "https://github.com/major7apps/pensyve"
documentation = "https://pensyve.com/docs"

[lib]
name = "pensyve_python"
crate-type = ["cdylib"]

[dependencies]
pensyve-core = { path = "../pensyve-core", features = ["observation-extraction"] }
pyo3 = { version = "^0.28.3", features = ["extension-module"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[lints]
workspace = true
