[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "pensyve"
version = "0.1.0"
description = "Universal memory runtime for AI agents"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pensyve._core"
python-source = "python"
manifest-path = "Cargo.toml"
