[build-system]
requires = ["maturin>=1.12"]
build-backend = "maturin"

[project]
name = "pensyve"
version = "0.1.0"
description = "Universal memory runtime for AI agents"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

[project.optional-dependencies]
http = ["httpx>=0.27", "tenacity>=8.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pensyve._core"
python-source = "python"
manifest-path = "Cargo.toml"
