[package]
name = "pensyve-wasm"
version = "1.3.1"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["wasmbind"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
