[project]
name = "pensyve-autogen"
version = "1.0.2"
description = "Pensyve memory backend for Microsoft AutoGen"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["pensyve>=0.1.0"]

[project.optional-dependencies]
autogen = ["autogen-core>=0.5"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
