[project]
name = "pensyve-crewai"
version = "1.0.1"
description = "Pensyve memory backend for CrewAI"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["pensyve>=0.1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99
