[project]
name = "pensyve-langchain"
version = "0.1.0"
description = "Pensyve memory backend for LangChain / LangGraph"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["pensyve>=0.1.0"]

[project.optional-dependencies]
cloud = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
